--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "next": "12.1.6",
+    "postcss": "^8.4.14",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "tailwindcss": "^3.1.4",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "eslint": "8.18.0",
