--- a/package.json
+++ b/package.json
@@ -9,12 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@notionhq/client": "^2.0.0",
+    "@tailwindcss/typography": "^0.5.3",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
+    "fetcher": "^0.3.0",
+    "fs": "^0.0.1-security",
+    "glob": "^8.0.3",
+    "gray-matter": "^4.0.3",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "12.1.6",
+    "next-mdx-remote": "^4.0.3",
+    "next-themes": "^0.2.0",
+    "nextjs-breadcrumbs": "^1.1.9",
+    "path": "^0.12.7",
     "postcss": "^8.4.14",
     "prop-types": "^15.8.1",
+    "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-highlight": "^5.0.2",
+    "rehype-slug": "^5.0.1",
+    "slugify": "^1.6.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.4",
     "typewriter-effect": "^2.18.2"
