--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "fetcher": "^0.3.0",
+    "framer-motion": "^10.12.9",
     "fs": "^0.0.1-security",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
