--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "12.1.6",
+    "next": "^13.4.1",
     "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.2.0",
     "nextjs-breadcrumbs": "^1.1.9",
@@ -33,8 +33,8 @@
     "postcss": "^8.4.14",
     "prop-types": "^15.8.1",
     "querystring": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.1.0",
@@ -47,6 +47,6 @@
   },
   "devDependencies": {
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "^13.4.1"
   }
 }
