--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@notionhq/client": "^2.0.0",
     "@tailwindcss/typography": "^0.5.3",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
