--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "caniuse-lite": "^1.0.30001492",
     "dayjs": "^1.11.3",
     "fetcher": "^0.3.0",
     "framer-motion": "^10.12.9",
