--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "caniuse-lite": "^1.0.30001492",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.3",
     "fetcher": "^0.3.0",
     "framer-motion": "^10.12.9",
