--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.1.0",
+    "mdast-util-to-string": "^4.0.0",
     "next": "^13.4.1",
     "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.2.0",
@@ -41,11 +42,13 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.1.0",
     "rehype-highlight": "^5.0.2",
+    "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^5.0.1",
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.4",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
