--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@marketsystems/nextjs13-appdir-breadcrumbs": "^1.0.4",
     "@notionhq/client": "^2.0.0",
     "@tailwindcss/typography": "^0.5.3",
     "@vercel/analytics": "^1.0.1",
@@ -26,12 +27,12 @@
     "fs": "^0.0.1-security",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
+    "install": "^0.13.0",
     "isomorphic-unfetch": "^3.1.0",
     "mdast-util-to-string": "^4.0.0",
     "next": "^13.4.1",
     "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.2.0",
-    "nextjs-breadcrumbs": "^1.1.9",
     "path": "^0.12.7",
     "postcss": "^8.4.14",
     "prop-types": "^15.8.1",
