--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.4",
+    "typescript": "^5.2.2",
     "typewriter-effect": "^2.19.0",
     "unist-util-visit": "^5.0.0"
   },
