--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@marketsystems/nextjs13-appdir-breadcrumbs": "^1.0.4",
     "@notionhq/client": "^2.0.0",
+    "@plaiceholder/next": "^3.0.0",
+    "@plaiceholder/tailwindcss": "^3.0.0",
     "@tailwindcss/typography": "^0.5.3",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.7",
@@ -34,6 +36,7 @@
     "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.2.0",
     "path": "^0.12.7",
+    "plaiceholder": "^3.0.0",
     "postcss": "^8.4.14",
     "prop-types": "^15.8.1",
     "querystring": "^0.2.1",
@@ -46,6 +49,7 @@
     "rehype-highlight": "^5.0.2",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^5.0.1",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.4",
